Fixed wrapping for second theme

--- a/css/forum.css
+++ b/css/forum.css
@@ -104,6 +104,11 @@ pre {
   color:inherit;
   margin:0;
   padding:0;
+  white-space: pre-wrap;       /* CSS 3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
   }
 .input {
   font-family:Arial,sans-serif;
